# Huntable-CTI-Studio

./: ..eval650.txt  .claudeignore  .coverage.Andrews-MacBook-Pro_local.pid35400.XvmQ9oCx.HNQIp837rWOh  .coverage.Andrews-MacBook-Pro_local.pid42979.XBDZyxtx.HNQIp837rWOh  .coverage.Andrews-MacBook-Pro_local.pid98642.XyMROFLx.HNQIp837rWOh  .coverage.Andrews-MacBook-Pro_local.pid99951.XNOBTFpx.HNQIp837rWOh  .cursorignore  .dockerignore  .env.bak2  .env.bak3  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .pytest-docker-config.ini  .safety-project.ini  .semgrepignore  =2.13.0  =6.0.0  AGENTS.backup.md  AGENTS.md  API_TESTS_SUMMARY.md  AWS_DEPLOYMENT_PLAN.md  AWS_DEPLOYMENT_README.md  BENCHMARKS.ipynb  BIDIRECTIONAL_WORKFLOW.md  CHANGELOG.md  CI_CD_FIX_GUIDE.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  CREDENTIAL_AUDIT_RESULTS.md  DATABASE_QUERY_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DOCKER_ARCHITECTURE.md  DOCUMENTATION.md  DO_NOT.md  Dockerfile  Dockerfile.allure  (+222 more)
.claude/: settings.local.json
.cursor/: README-MCP.md
.github/: SECURITY.md  dependabot.yml
Archive/: backup_restore.sh  export-cursor-settings-with-ai.sh  run_web_ui.sh  setup-mcp.sh  setup_ollama_docker.sh  test_sigma_rule.yml
BenchmarksEvalReports/: extract_agent_benchmark_report.html  three_models_analysis.txt
Evals/: BENCHMARKS.md  BENCHMARKS_NOTEBOOK_DATA.md  DEEPSEEK_R1_RESULTS.md  LLAMA3.1_FIX.md  LLAMA3.1_ISSUES.md  MODEL_RECOMMENDATIONS_UPDATED.md  OS_BERT_FINETUNING.md  tmp_eval.jsonl
MLWorkspace/: Huntable_Table_44_complete.csv  colab_finetune_backend.ipynb  cti_paragraphs.csv  cti_paragraphs_with_sigma.csv  sigma_results.json  sigma_rules_thedfirreport_combined.csv  sigma_rules_thedfirreport_raw_fixed.csv
Workshop/: README.md  USER_GUIDE.md  admin.jsonl  annotated_only.jsonl  doccano_import.txt  requirements.txt
allure-report/: index.html
allure-results/: 0d0dcd53-0183-4d1d-8e07-8248eb9fd6ce-attachment.txt  12f514cd-c850-4b86-9811-6f2b90c1dfe1-attachment.txt  15f2c537-0610-47de-ab73-b1a9ab503ebd-attachment.txt  1c80ddfd-4bdd-4ff6-aa7e-87f890dc6b2d-attachment.txt  1ca66307-1b25-4e50-a627-78f198064190-attachment.txt  1fa145f1-6023-4211-8930-bb0a2c348fd5-attachment.txt  214b7758-0f8f-4b1c-b5b3-47ac85d7cfbb-attachment.txt  3660c944-71f9-426e-8811-f28b27985e49-attachment.txt  37cc48df-45d6-4442-b053-faf09e3447a4-attachment.txt  39a03760-6966-4ca3-8e3b-1df20e43df8b-attachment.txt  3a3174eb-4229-423b-8c42-7b9b0bca791e-attachment.txt  4d18630b-92c0-4e80-a120-66dfc6d79047-attachment.txt  69e82cdd-7d75-49e2-8654-bdbad79db999-attachment.txt  6d4317a2-ff80-4cf6-a43f-9c7f18b588cf-attachment.txt  6f368845-8c05-486d-aced-e1e6d2affe36-attachment.txt  796d8235-0a1a-4332-b8c1-c46d1c0bed27-attachment.txt  82fc2539-dfc9-4df7-a5ee-f11bd2227f87-attachment.txt  8620c8a3-77c3-4b8a-8ada-16b66ab555ef-attachment.txt  8801dd51-74e7-4399-874c-e9e5e2543134-attachment.txt  8ce92155-5cf6-4a26-83b1-764c417bf31c-attachment.txt  928f7db7-e258-4a0d-abfa-edf7bf5e1560-attachment.txt  a47d5564-54e9-4764-8d8f-8f9b90519b3b-attachment.txt  a89176d9-cf72-4b8f-a9c9-31a3a1b7e3d5-attachment.txt  ab96239c-9ed1-4c25-a987-92052518b838-attachment.txt  b606472f-b10f-4f33-b8b9-524e3fcca9e1-attachment.txt  d08bb5e1-3eba-40d1-97df-ca216426e297-attachment.txt  d475f1ae-d2aa-4f6e-87c1-b3e8360cdc79-attachment.txt  da01f4fb-e873-4da7-ac33-09a5148c118a-attachment.txt  e948f734-0e20-4095-8f8c-7a278edce754-attachment.txt  eee6fcb9-c7a9-4225-8524-6015e8b0666e-attachment.txt  f905774a-11d4-40c0-94eb-0c2472184c4b-attachment.txt  fecf4172-7ab8-48e2-b0b3-a16a09007816-attachment.txt
app/: package.json
archived/: ~$Huntable_Table_44_complete.xlsx
backup_old_architecture/: BACKUP_MANIFEST.md
browser-extension/: README.md  background.js  content.js  install.sh  manifest.json  popup.html  popup.js  test-article.html  test-cisa.html
config/: attack_technique_platforms.json  backup.yaml  domain_classification_kb.yaml  eval_articles.yaml  keyword_registry.yaml  models.yaml  platform_classification_kb.yaml  product_classification_kb.yaml  provider_model_catalog.json  sources.yaml
data/: training_data.jsonl
docs/: ACCURACY_REPORT.md  API_ENDPOINTS.md  ASYNCIO_RUN_ELIMINATION_REPORT.md  AWS_BEDROCK_SETUP.md  CHANGELOG.md  COLOR_CODE_CLUSTERS.md  CONTENT_FILTERING_SYSTEM.md  CONTRIBUTING.md  Callisto.md  DATABASE_BACKUP_RESTORE.md  DATABASE_TRAINING_SYSTEM.md  DEBUGGING_TOOLS_GUIDE.md  DOCUMENTATION.md  EXTRACT_AGENT_EVALUATION.md  EXTRACT_AGENT_FINETUNING.md  EXTRACT_AGENT_MODEL_RECOMMENDATIONS.md  FINETUNING_ARTICLE_SELECTION.md  FINETUNING_FILTERED_CONTENT.md  GPT4O_CONTENT_FILTERING_SYSTEM.md  HUNTABLE_WINDOWS_CLASSIFIER.md  HUNTABLE_WINDOWS_TRAINING_STRATEGY.md  Kepler.md  LANGGRAPH_INTEGRATION.md  LANGGRAPH_QUICKSTART.md  LIVE_VIEW_OVERHAUL_PLAN.md  LMSTUDIO_INTEGRATION.md  LMSTUDIO_TROUBLESHOOTING.md  LOCAL_LLM_PERFORMANCE.md  MIXTRAL_LOADING_FIX.md  ML_HUNT_SCORING.md  ML_VS_HUNT_COMPARISON_GUIDE.md  MODEL_RECOMMENDATIONS.md  Model_Selection_Guide_CTI_Workflows.md  NOUS_HERMES_RESULTS.md  OS_DETECTION_CLASSIFIER_TRAINING.md  OpenAI_Chat_Models_Reference.md  PROMPT_MAPPING_TABLE.md  PROMPT_WINDOWS_SCOPE_ANALYSIS.md  RAG_SYSTEM.md  README.md  (+22 more)
e2e/: test-1.spec.ts
high_score_articles/: 81.0_Obscura,_an_Obscure_New_Ransomware_Variant.md  82.5_Vulnerability_Summary_for_the_Week_of_September_22,_2025.md  84.1_Wing_FTP_Server_Remote_Code_Execution_(CVE-2025-47812)_Exploited_in_the_Wild.md  87.1_Raspberry_Robin_Malware_in_2025_From_USB_Worm_to_Elite_Initial_Access_Broker.md  88.7_Kawabunga,_Dude,_You’ve_Been_Ransomed!.md  (+10 more)
init-scripts/: 00_create_test_db.sh
nginx/: nginx.conf
sigma_semantic_similarity/: README.md  cli.py  pyproject.toml  rule_a.yaml  rule_b.yaml
sigma_semantic_similarity/sigma_similarity/: __main__.py  ast_builder.py  atom_extractor.py  canonical_logsource.py  detection_normalizer.py  dnf_normalizer.py  errors.py  filter_analyzer.py  similarity_engine.py  surface_estimator.py
sigma_semantic_similarity/tests/: conftest.py  test_ast_snapshot.py  test_registry_coverage.py  test_similarity_engine.py
(+1999 files in other folders)
