[project]
name = "cti-scraper"
version = "5.2.0"
description = "CTI Scraper - Threat intelligence aggregator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core scraping and processing
    "requests==2.33.0",
    "httpx==0.28.1",
    "brotli>=1.0.0",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "feedparser==6.0.12",
    "extruct==0.18.0",
    "iocextract==1.16.1",
    "playwright==1.58.0",
    # Data processing and storage
    "pandas==2.3.3",
    "numpy==2.4.3",
    "sqlalchemy[asyncio]==2.0.48",
    "asyncpg==0.31.0",
    "PyYAML==6.0.3",
    "psycopg2-binary==2.9.11",
    "alembic==1.18.4",
    # Web framework and server
    "fastapi==0.135.1",
    "starlette==0.52.1",
    "uvicorn[standard]==0.41.0",
    "jinja2==3.1.6",
    # Background task processing
    "celery==5.6.2",
    "redis==7.3.0",
    # Classification and ML
    "scikit-learn==1.8.0",
    "lightgbm==4.6.0",
    "joblib==1.5.3",
    "spacy>=3.7.0",
    # Utilities
    "click==8.3.1",
    "rich==14.3.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "reportlab==4.4.10",
    "python-dateutil==2.9.0.post0",
    # Security
    "certifi==2025.11.12",
    "urllib3==2.6.3",
    "charset-normalizer==3.4.5",
    "python-multipart==0.0.22",
    "cryptography==46.0.5",
    # PDF processing
    "pypdf==6.9.2",
    # SIGMA rule validation
    "pysigma==0.11.23",
    "GitPython==3.1.46",
    # AI/ML
    "torch>=2.0.0",
    "transformers>=4.21.0",
    "accelerate>=0.20.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.2",
    "pgvector>=0.4.0",
    # Agentic workflow
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=0.2.0",
    "langgraph-checkpoint-postgres>=0.2.0",
    "langgraph-cli>=0.4.0",
    "langfuse>=3.11.2",
    # MCP server
    "mcp[cli]>=1.0.0",
    # Security pins (transitive dependency floors)
    "Authlib>=1.6.9",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    # Local packages
    "sigma-semantic-similarity",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "vulture>=2.14",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.12.0",
    "pytest-cov==4.1.0",
    "pytest-html==4.0.1",
    "pytest-xdist==3.5.0",
    "pytest-playwright>=0.4.0",
    "factory-boy==3.3.3",
    "freezegun==1.4.0",
    "responses==0.24.0",
    "requests-mock==1.11.0",
    "testcontainers==3.7.0",
    "faker==28.1.0",
    "psutil>=7.0.0",
    "memory-profiler==0.61.0",
    "pytest-benchmark==4.0.0",
    "bandit==1.9.4",
    "pip-audit>=2.9.0",
    "safety>=2.3.5",
    "black==26.3.1",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.8.0",
    "sphinx==7.1.0",
    "sphinx-rtd-theme==3.0.2",
    "pytest-reportlog>=0.1.0",
    "allure-pytest>=2.13.0",
    "line-profiler>=4.0.0",
]

[tool.uv.workspace]
members = ["sigma_semantic_similarity"]

[tool.uv.sources]
sigma-semantic-similarity = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RET", # flake8-return
    "SIM", # flake8-simplify
]
# Pre-existing violations accumulated before lint CI was introduced.
# Each group is tracked as tech debt — fix and remove incrementally.
extend-ignore = [
    "E501",   # line too long (180 violations) — enforce after bulk cleanup
    "E712",   # comparison to True/False (65) — widespread in test assertions
    "E402",   # module-level import not at top (41) — sys.path patterns in tests/scripts
    "RET504", # unnecessary assignment before return (38)
    "F841",   # local variable assigned but never used (28)
    "SIM102", # nested if statements (27)
    "SIM117", # nested with statements (23)
    "SIM108", # ternary operator preferred (22)
    "SIM105", # use contextlib.suppress (8)
    "SIM103", # return condition directly (4)
    "B007",   # loop control variable not used in loop body (10)
    "B008",   # function call in default argument (7)
    "B905",   # zip() without explicit strict (7)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"src/workflows/agentic_workflow.py" = ["E501"]
"src/services/evaluation/eval_runner.py" = ["E501"]
"src/services/llm_service.py" = ["E501"]
"src/web/routes/workflow_executions.py" = ["E501"]
"src/cli/main.py" = ["E402"]
"src/web/routes/chat.py" = ["E501"]
"src/worker/celery_app.py" = ["E402", "E501", "SIM105", "RET504", "B904", "B905", "F841"]

[tool.ruff.format]
# Use ruff as the formatter (enabled by default when ruff is installed)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.vulture]
min_confidence = 80
paths = ["src", "scripts", "vulture_whitelist.py"]
