[project]
name = "cti-scraper"
version = "7.4.0"
description = "CTI Scraper - Threat intelligence aggregator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core scraping and processing
    "requests==2.34.2",
    "httpx==0.28.1",
    "brotli==1.2.0",
    "beautifulsoup4==4.14.3",
    "lxml==6.1.1",
    "feedparser==6.0.12",
    "extruct==0.18.0",
    "iocextract==1.16.1",
    "trafilatura==2.0.0",
    "playwright==1.60.0",
    # Data processing and storage
    "pandas==2.3.3",
    "numpy==2.4.6",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "PyYAML==6.0.3",
    "psycopg2-binary==2.9.11",
    "alembic==1.18.4",
    # Web framework and server
    "fastapi==0.136.3",
    "starlette==1.0.1",
    "uvicorn[standard]==0.48.0",
    "jinja2==3.1.6",
    # Background task processing
    "celery==5.6.2",
    "redis==7.4.0",
    # Classification and ML
    "scikit-learn==1.9.0",
    "lightgbm==4.6.0",
    "joblib==1.5.3",
    "spacy==3.8.14",
    # Utilities
    "click==8.4.1",
    "rich==14.3.3",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "reportlab==4.5.1",
    "python-dateutil==2.9.0.post0",
    # Security
    "certifi==2026.5.20",
    "urllib3==2.7.0",
    "charset-normalizer==3.4.5",
    "python-multipart==0.0.27",
    "cryptography==48.0.0",
    # PDF processing
    "pypdf==6.12.2",
    # SIGMA rule validation
    "pysigma==1.3.3",
    "GitPython==3.1.50",
    # AI/ML
    # torch 2.11.0 has no macosx_x86_64 wheel (Intel Mac support was dropped).
    # Skip installation on Intel Mac; all other platforms (Linux, Apple Silicon, Windows) get the pinned version.
    "torch==2.11.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "transformers==5.11.0",
    "accelerate==1.13.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "openai==2.38.0",
    "tiktoken==0.13.0",
    "sentence-transformers==5.5.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pgvector==0.4.2",
    # Agentic workflow
    "langgraph==1.2.4",
    "langgraph-checkpoint==4.1.1",
    "langgraph-checkpoint-postgres==3.1.0",
    "langgraph-cli==0.4.26",
    "langfuse==4.3.1",
    # MCP server
    "mcp[cli]==1.27.1",
    # Security pins (transitive dependency floors — >= intentional, mirrored in requirements.txt)
    "Authlib==1.7.2",
    "Pillow==12.2.0", # CVE-2026-40192: FITS GZIP decompression bomb
    "langchain-core>=1.3.3", # CVE-2026-40087 + CVE-2026-44843 fixes; >= intentional: shared by langgraph/langfuse/langchain — == would block their upgrades
    "langsmith==0.8.9", # CVE-2026-45134 fix; exact pin mirrors requirements.txt
    "Mako==1.3.12", # path traversal + CVE-2026-44307 fixes
    "idna==3.16", # CVE-2026-45409 fix; exact pin closes supply-chain window on uv lock re-runs
    "pymdown-extensions==10.21.3", # CVE-2026-46338 fix; exact pin closes supply-chain window on uv lock re-runs
    "PyJWT==2.13.0", # CVE PYSEC-2026-175/177/178/179; transitive via mcp[cli] (sole parent), exact pin per single-parent convention
    # Documentation
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    # Local packages
    "sigma-atom-similarity",
]

[dependency-groups]
dev = [
    "ruff==0.15.17",
    "vulture==2.16",
    "pre-commit==4.6.0",
]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "pytest-cov==4.1.0",
    "pytest-html==4.2.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist==3.8.0",
    "pytest-playwright==0.7.2",
    "factory-boy==3.3.3",
    "freezegun==1.5.5",
    "responses==0.26.1",
    "requests-mock==1.12.1",
    "testcontainers==3.7.0",
    "psutil==7.2.2",
    "memory-profiler==0.61.0",
    "bandit==1.9.4",
    # pip-audit pulls pip-api -> pip. CVE-2026-3219 (GHSA-58qw-9mgm-455v) flags
    # pip<=26.0.1 (medium); no patched pip released yet. Test-only scope, used
    # to read uv.lock metadata in CI - never installs untrusted archives.
    # Dependabot alert #152 dismissed (tolerable_risk). Bump when upstream
    # ships a fix that lets us pin to a non-vulnerable pip.
    "pip-audit==2.10.0",
    "safety==3.8.1",
    "black==26.3.1",
    "isort==5.12.0",
    "mypy==1.8.0",
    "sphinx==9.0.4",
    "sphinx-rtd-theme==3.1.0",
    "pytest-reportlog==1.0.0",
    "allure-pytest==2.16.0",
    "line-profiler==5.0.2",
]

[tool.uv.workspace]
members = ["sigma_atom_similarity"]

[tool.uv.sources]
sigma-atom-similarity = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RET", # flake8-return
    "SIM", # flake8-simplify
]
# Pre-existing violations accumulated before lint CI was introduced.
# Each group is tracked as tech debt — fix and remove incrementally.
extend-ignore = [
    "E501",   # line too long (180 violations) — enforce after bulk cleanup
    "E712",   # comparison to True/False (65) — widespread in test assertions
    "E402",   # module-level import not at top (41) — sys.path patterns in tests/scripts
    "RET504", # unnecessary assignment before return (38)
    "SIM102", # nested if statements (27)
    "SIM117", # nested with statements (23)
    "SIM108", # ternary operator preferred (22)
    "SIM105", # use contextlib.suppress (8)
    "SIM103", # return condition directly (4)
    "B007",   # loop control variable not used in loop body (10)
    "B008",   # function call in default argument (7)
    "B905",   # zip() without explicit strict (7)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"src/workflows/agentic_workflow.py" = ["E501"]
"src/services/evaluation/eval_runner.py" = ["E501"]
"src/services/llm_service.py" = ["E501"]
"src/web/routes/workflow_executions.py" = ["E501"]
"src/cli/main.py" = ["E402"]
"src/web/routes/chat.py" = ["E501"]
"src/worker/celery_app.py" = ["E402", "E501", "SIM105", "RET504", "B904", "B905"]
"vulture_whitelist.py" = ["F821", "B018"]

[tool.ruff.format]
# Use ruff as the formatter (enabled by default when ruff is installed)

[tool.mypy]
python_version = "3.12"
warn_return_any = false   # pre-existing [no-any-return] violations — re-enable after cleanup
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
# Pre-existing violations accumulated before mypy CI was introduced.
# Each group is tracked as tech debt — fix and remove incrementally.
disable_error_code = [
    "arg-type",       # 357 violations — function argument type mismatches
    "assignment",     # 337 violations — incompatible assignment types
    "union-attr",     # 157 violations — attribute access on Optional types
    "attr-defined",   # 117 violations — undefined attributes
    "var-annotated",  # 87 violations — variables needing type annotations
    "operator",       # 41 violations — unsupported operand types
    "call-arg",       # 37 violations — unexpected/missing keyword arguments
    "return-value",   # 35 violations — incompatible return types
    "index",          # 32 violations — invalid index types
    "valid-type",     # 29 violations — invalid type expressions
    "misc",           # 42 violations — miscellaneous type errors
    "import-untyped", # 20 violations — library stubs not installed (e.g. PyYAML)
    "dict-item",      # 8 violations — incompatible dict value types
    "typeddict-item", # 7 violations — TypedDict key/value mismatches
    "no-redef",       # violations — name already defined (context managers)
    "return",         # missing return statements in complex branching
    "abstract",       # abstract class instantiation (test/service stubs)
    "type-var",       # type variable constraints with SQLAlchemy columns
    "has-type",       # cannot determine type (conditional assignments)
    "call-overload",  # overload variant mismatches (range/max with object types)
    "list-item",      # incompatible list item types (str | None in list[str])
]

[tool.vulture]
min_confidence = 80
paths = ["src", "scripts", "vulture_whitelist.py"]

[tool.pytest.ini_options]
# Moved from tests/pytest.ini — pyproject.toml is the authoritative pytest config
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "e2e: End-to-end tests using Playwright",
    "unit: Unit tests",
    "integration: Integration tests",
    "integration_light: Lightweight integration tests with mocks",
    "integration_full: Full integration tests requiring full environment",
    "integration_workflow: Integration workflow tests",
    "slow: Slow running tests (performance timings, mobile viewport resizes, a11y deep-scans) — excluded from default UI runs; use python3 run_tests.py ui --include-slow to run",
    "browser: Tests requiring browser",
    "api: API endpoint tests",
    "ai: AI assistant and summarization tests",
    "ui: UI tests",
    "smoke: Smoke tests",
    "prod_smoke: Opt-in read-only smoke checks against a non-test DATABASE_URL (guarded; never runs under run_tests.py)",
    "asyncio: Async tests",
    "dashboard: Dashboard-specific tests",
    "performance: Performance and load tests",
    "analytics: Analytics and metrics tests",
    "diags: Diagnostics UI tests",
    "diagnostics: Diagnostics UI tests",
    "help: Help UI tests",
    "settings: Settings UI tests",
    "accessibility: Accessibility UI tests",
    "articles: Article detail UI tests",
    "chat: Chat UI tests",
    "error_handling: Error handling UI tests",
    "health_checks: Health-check UI tests",
    "jobs: Jobs UI tests",
    "mobile: Mobile/responsive UI tests",
    "navigation: Cross-page navigation UI tests",
    "pdf_upload: PDF upload UI tests",
    "sources: Sources UI tests",
    "skip: Explicit skip marker for conditional test skips",
    "priority_high: High priority E2E tests",
    "priority_medium: Medium priority E2E tests",
    "priority_low: Low priority E2E tests",
    "workflow: Workflow E2E tests",
    "infrastructure: Infrastructure E2E tests",
    "prod_data: Tests that require production data access",
    "production_data: Tests that require production data access",
    "requires_docker: Tests that must run in Docker environment",
    "celery_task: Celery task tests",
    "scoring_system: Scoring system tests",
    "annotation_feedback: Annotation feedback tests",
    "content_pipeline: Content pipeline tests",
    "source_management: Source management tests",
    "rag_conversation: RAG conversation tests",
    "error_recovery: Error recovery tests",
    "export_backup: Export and backup tests",
    "regression: Regression tests for previously fixed behavior",
    "contract: API/schema contract tests",
    "security: Security hardening and abuse-case tests",
    "a11y: Accessibility baseline tests",
    "quarantine: Quarantined tests that need fixes (tracked in SKIPPED_TESTS.md)",
    "ui_smoke: UI smoke tests (reclassified Playwright tests)",
    "sigma: SIGMA rule enrichment tests",
    "agent_config_mutation: UI tests that mutate agent/workflow/settings config (run eval, save config, save settings)",
    "timeout: Per-test timeout in seconds (from pytest-timeout)",
    "lmstudio: Tests requiring a running LMStudio instance (skipped automatically when LMStudio is unreachable)",
    "docs: Documentation build and sanity tests",
]
addopts = "-p no:langsmith_plugin --strict-markers --strict-config --verbose --tb=short --alluredir=allure-results -ra --showlocals -W ignore::pydantic.warnings.PydanticDeprecatedSince20 --timeout=60"
console_output_style = "progress"
junit_family = "xunit2"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:requests.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:pydantic._internal._config",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
