[project]
name = "sigma-semantic-similarity"
version = "0.1.0"
description = "Deterministic Sigma rule semantic similarity engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml==6.0.3"]

[project.scripts]
sigma-similarity = "cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]  # build tools: >= is standard here
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sigma_similarity*"]

[tool.setuptools]
py-modules = ["cli"]
